# SCAS

./: README.md  Result_export_20240903_142134.xlsx  Result_export_20240906_174824.xlsx  TSeeker.py  pyproject.toml  test_fa_result_export.xlsx
01_corpRch_ecoAct/: visual.py
01_corpRch_ecoAct/NoteBook/: 02_EDA_FA.ipynb
01_corpRch_ecoAct/NoteBook/result/: efa_01.xlsx
01_corpRch_ecoAct/data/ecoAct/: 경상_건설기성액_계절조정_수정.xlsx  경상_기계수주액_계절조정_수정.xlsx  경상_산업생산지수_계절조정_수정.xlsx
01_corpRch_ecoAct/data/svyIdx/: 기업경기조사(실적)_전산업_선택.xlsx  기업경기조사(전망)_240817.xlsx  기업경기조사(전망)_전산업_선택.xlsx
02_house_eco/data/: [붙임1]통계표_2024년8월.xlsx  [붙임2]Construction+cost+indices_2024_08.xlsx  생산자물가지수(기본분류)_30161548.xlsx  주요_인구지표_성비_인구성장률_인구구조_부양비_등____전국_20240930163653.xlsx  주택매매가격지수(KB)_30155924.xlsx
DB/: DBconn.py  dataloader.py
DB/Data/: data_01.xlsx  분석_데이터_목록.xlsx  분석_데이터_목록_v2.xlsx
DB/Data/corpRch/: 연구전담부서_정리_t3_re.xlsx
DB/Data/ecoAct/: 경상_경기종합지수_계절조정_수정.xlsx  경상_생산자물가지수_계절조정_수정.xlsx  취업자_경제활동인구_계절조정_수정.xlsx
DB/Data/tmp/: 복수통계_30163141.xlsx  (+1 more)
DB/DataBase/: scas.db
DB/dataModel/: PJ01_TB_model.py
DB/sample/: query_alch.py  query_table.py  test01_dbconn.py
GUI/: mForm.py  rawData.py
GUI/ui/: main.ui  rawData.ui
app/: faForm.py
app/bak/: faForm.py  faForm3.py
app/ui/: FAtool.py  FAtool.ui  FAtool_ui.py  fa.ui  formatW.ui  formatW_ui.py
app/utils/: FA.py  TSm.py
corpRch_ecoAct/: FactorAnly.py  TSanly.py  dataloader.py  tTools.py  visual.py
corpRch_ecoAct/NoteBook/: 02_EDA_FA.ipynb  03_OLS_GrangerC.ipynb
corpRch_ecoAct/data/: 분석_데이터_목록.xlsx
(+6 files in other folders)
